Switched to unified frame request